// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ManyToMany > should register inverse side metadata 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "ManyToManyProduct",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "name",
      "max": null,
      "min": null,
      "name": "name",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "manyToManyProductId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "products",
      "joinKeys": {
        "manyToManyProductId": "id",
      },
      "joinTable": "many_to_many_category_x_many_to_many_product",
      "key": "categories",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`ManyToMany > should register owning side metadata 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "ManyToManyCategory",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "name",
      "max": null,
      "min": null,
      "name": "name",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "manyToManyCategoryId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "categories",
      "joinKeys": {
        "manyToManyCategoryId": "id",
      },
      "joinTable": "many_to_many_category_x_many_to_many_product",
      "key": "products",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
